--- a/package.json
+++ b/package.json
@@ -5,14 +5,20 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.3.1",
     "bulma": "0.7.1",
+    "prop-types": "^15.6.2",
     "react": "16.4.2",
     "react-dom": "16.4.2",
     "react-redux": "5.0.7",
     "react-scripts": "1.1.4",
-    "redux": "4.0.0"
+    "redux": "4.0.0",
+    "redux-thunk": "^2.3.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "eslint": "^5.5.0",
+    "eslint-plugin-react": "^7.11.1"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
